--- a/RouteLocalization.Mvc.Sample/Views/Shared/_Layout.cshtml
+++ b/RouteLocalization.Mvc.Sample/Views/Shared/_Layout.cshtml
@@ -5,35 +5,39 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>RouteLocalization.MVC.Sample</title>
 	</head>
-	<body>
-		<div>
-			@RenderBody()
-		</div>
-		<div>
-			<p>Current Culture: @Thread.CurrentThread.CurrentCulture.Name</p>
-			<p>Current localized Route: @Url.RouteUrl(ViewContext.RouteData.Values)</p>
-			@{
-				RouteValueDictionary routeValueDictionaryEN = new RouteValueDictionary(ViewContext.RouteData.Values) { { "Culture", "en" } };
+<body>
+	<div>
+		@RenderBody()
+	</div>
+	<div>
+		<p>Current Culture: @Thread.CurrentThread.CurrentCulture.Name</p>
+		<p>Current localized Route: @Url.RouteUrl(ViewContext.RouteData.Values)</p>
+		@{
+				RouteValueDictionary routeValueDictionaryEN = new RouteValueDictionary(ViewContext.RouteData.Values);
+				routeValueDictionaryEN["culture"] = "en";
+				
 				<p>Current Route (en): @Url.RouteUrl(routeValueDictionaryEN)</p>
-			}
-			@{
-				RouteValueDictionary routeValueDictionaryDE = new RouteValueDictionary(ViewContext.RouteData.Values) { { "Culture", "de" } };
+		}
+		@{
+				RouteValueDictionary routeValueDictionaryDE = new RouteValueDictionary(ViewContext.RouteData.Values);
+				routeValueDictionaryDE["culture"] = "de";
+				
 				<p>Current Route (de): @Url.RouteUrl(routeValueDictionaryDE)</p>
-			}
-			<p>Named Route (Book):</p>
-			@{
-				<p>Named Route (en): @Url.RouteUrl("Book", new { chapter = 1, page = 4, Culture = "en" })</p>
-			}
-			@{
-				<p>Named Route (de): @Url.RouteUrl("Book", new { chapter = 1, page = 4, Culture = "de" })</p>
-			}
-			<p>T4 Route (Book):</p>
-			@{
-				<p>Named Route (en): @Url.Action(MVC.Home.Book(1, 4).AddRouteValues(new { culture = "en" }))</p>
-			}
-			@{
-				<p>Named Route (de): @Url.Action(MVC.Home.Book(1, 4).AddRouteValues(new { culture = "de" }))</p>
-			}
-		</div>
-	</body>
+		}
+		<p>Named Route (Book):</p>
+		@{
+			<p>Named Route (en): @Url.RouteUrl("Book", new { chapter = 1, page = 4, Culture = "en" })</p>
+		}
+		@{
+			<p>Named Route (de): @Url.RouteUrl("Book", new { chapter = 1, page = 4, Culture = "de" })</p>
+		}
+		<p>T4 Route (Book):</p>
+		@{
+			<p>Named Route (en): @Url.Action(MVC.Home.Book(1, 4).AddRouteValues(new { culture = "en" }))</p>
+		}
+		@{
+			<p>Named Route (de): @Url.Action(MVC.Home.Book(1, 4).AddRouteValues(new { culture = "de" }))</p>
+		}
+	</div>
+</body>
 </html>
